test/data/semantic-errors/&!&-must-have-boolean-operands.jen
aBoolean := true
notABoolean := 2
aBinaryExpression := aBoolean &!& notABoolean
